2012-10-16  Ian Lance Taylor  <iant@google.com>

	* doc/extend.texi (Return Address): Change
	__builtin_extract_return_address to
	__builtin_extract_return_addr.

2012-10-16  Steven Bosscher  <steven@gcc.gnu.org>

	* rtl.h (get_call_rtx_from): New prototype.
	* rtlanal.c (get_call_rtx_from): New function.
	* calls.c (emit_call_1): Use it.
	* dse.c (scan_insn): Likewise
	* dwarf2out.c (dwarf2out_var_location): Likewise.
	* sched-deps.c (call_may_noreturn_p): Likewise.
	* var-tracking.c (prepare_call_arguments): Likewise.
	* config/sh/sh.c (sh_adjust_cost): Likewise.

2012-10-16  Tom de Vries  <tom@codesourcery.com>

	* expr.c (move_by_pieces, move_by_pieces_ninsns, can_store_by_pieces)
	(store_by_pieces_1): Don't enter loop when no more data is left.

2012-10-16  Joern Rennecke  <joern.rennecke@embecosm.com>

	* loop-doloop.c (doloop_modify): Pass doloop_end pattern to
	gen_doloop_begin.
	(doloop_optimize): Pass flag to indicate if loop is entered at top
	to gen_doloop_end.
	* config/arm/thumb2.md (doloop_end): Accept extra operand.
	* config/bfin/bfin.md (doloop_end): Likewise.
	* config/c6x/c6x.md (doloop_end): Likewise.
	* config/ia64/ia64.md (doloop_end): Likewise.
	* config/mep/mep.md (doloop_begin, doloop_end): Likewise.
	* config/rs6000/rs6000.md (doloop_end): Likewise.
	* config/s390/s390.md (doloop_end): Likewise.
	* config/sh/sh.md (doloop_end): Likewise.
	* config/spu/spu.md (doloop_end): Likewise.
	* config/tilegx/tilegx.md (doloop_end): Likewise.
	* config/tilepro/tilepro.md (doloop_end): Likewise.
	* doc/md.texi (doloop_end): Document new operand.
	* basic-block.h (contains_no_active_insn_p): Declare.
	* cfgrtl.c (contains_no_active_insn_p): New function, factored
	out of ...
	(forwarder_block_p): ... here.

2012-10-16  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c/53063
	PR c/40989
	* doc/options.texi (EnabledBy): Document new form.
	* optc-gen.awk: Handle new form of EnabledBy.
	* common.opt (Wunused-but-set-parameter): Use EnabledBy.